@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.2 2005/02/23 22:24:31 agc Exp $
-
-SHA1 (Distutils-1.0.2.tar.gz) = 13534eb11f9ae6f935f204a2c9c3681ba3ee24d0
-RMD160 (Distutils-1.0.2.tar.gz) = c3c047b0b7f4cd448f6833ec12cbcce3a6b82fa7
-Size (Distutils-1.0.2.tar.gz) = 233742 bytes
